fix banner on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -30,10 +30,7 @@ $on-laptop:        800px;
 }
 
 .site-title {
-  background-image: url({{site.baseurl}}/images/banner.gif);
-  height: 98px;
   text-indent: -10000px;
-  width: 790px;
 }
 
 .tagline {
